--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,11 @@
+<!--
+ * @Author: your name
+ * @Date: 2020-03-25 17:24:26
+ * @LastEditTime: 2020-04-28 08:54:24
+ * @LastEditors: your name
+ * @Description: In User Settings Edit
+ * @FilePath: \www_admin_master\public\index.html
+ -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -14,4 +22,20 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+  <script>
+    fnResize()
+    window.onresize = function () {
+    fnResize()
+    }
+    function fnResize() {
+    var deviceWidth = document.documentElement.clientWidth || window.innerWidth
+    if (deviceWidth >= 750) {
+    deviceWidth = 750
+    }
+    if (deviceWidth <= 320) {
+    deviceWidth = 320
+    }
+    document.documentElement.style.fontSize = (deviceWidth / 7.5) + 'px'
+    }
+    </script>
 </html>
