--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!--
  * @Author: your name
  * @Date: 2020-03-25 17:24:26
- * @LastEditTime: 2020-04-28 08:54:24
- * @LastEditors: your name
+ * @LastEditTime: 2020-05-07 15:45:20
+ * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \www_admin_master\public\index.html
  -->
@@ -29,13 +29,13 @@
     }
     function fnResize() {
     var deviceWidth = document.documentElement.clientWidth || window.innerWidth
-    if (deviceWidth >= 750) {
-    deviceWidth = 750
+    if (deviceWidth >= 1920) {
+    deviceWidth = 1920
     }
-    if (deviceWidth <= 320) {
-    deviceWidth = 320
-    }
-    document.documentElement.style.fontSize = (deviceWidth / 7.5) + 'px'
+    // if (deviceWidth <= 320) {
+    // deviceWidth = 320
+    // }
+    document.documentElement.style.fontSize = (deviceWidth / 19.2) + 'px'
     }
     </script>
 </html>
