--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script>
+  <!-- <script>
     fnResize()
     window.onresize = function () {
     fnResize()
@@ -37,5 +37,5 @@
     // }
     document.documentElement.style.fontSize = (deviceWidth / 19.2) + 'px'
     }
-    </script>
+    </script> -->
 </html>
