--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!--
  * @Author: your name
  * @Date: 2020-03-25 17:24:26
- * @LastEditTime: 2020-05-07 15:45:20
+ * @LastEditTime: 2020-05-12 15:36:51
  * @LastEditors: Please set LastEditors
  * @Description: In User Settings Edit
  * @FilePath: \www_admin_master\public\index.html
@@ -22,7 +22,7 @@
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
-  <script>
+  <!-- <script>
     fnResize()
     window.onresize = function () {
     fnResize()
@@ -37,5 +37,5 @@
     // }
     document.documentElement.style.fontSize = (deviceWidth / 19.2) + 'px'
     }
-    </script>
+    </script> -->
 </html>
